REGRESSION(r118414): some pages on concursolutions.com doesn't show up https://bugs.webkit.org/show_bug.cgi?id=89399

Reviewed by Adam Barth.

Source/WebCore:

The bug was caused by insertAdjacentHTML's not passing context element to createFragmentForInnerOuterHTML.

Test: fast/html/adjacent-html-context-element.html

* html/HTMLElement.cpp:
(WebCore::HTMLElement::insertAdjacentHTML):

LayoutTests:

Add a regression test.

* fast/html/adjacent-html-context-element-expected.txt: Added.
* fast/html/adjacent-html-context-element.html: Added.


Canonical link: https://commits.webkit.org/107249@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120638 268f45cc-cd09-0410-ab3c-d52691b4dbfc